--- a/2018.html
+++ b/2018.html
@@ -27,9 +27,6 @@
 			<div class="slides">
 				<section>
 					<img class="logo" src="images/CFG_Chemnitz.svg">
-					<!--<p>
-						<small class="ok-orange">CODE A DIFFERENCE: Nutz' deine Fähigkeiten, um deine Stadt zu verbessern!</small>
-					</p>-->
 				</section>
 
 				<section>
@@ -62,7 +59,7 @@
 				</section>
 				<section>
 					<img src="images/2016/codeforgermany.jpg">
-					<a href="https://www.flickr.com/photos/okfde/17060438856/in/album-72157651437807290/" class="copyright-note">Open Knowledge Foundation Deutschland</a>
+					<a href="https://www.flickr.com/photos/okfde/17060438856/in/album-72157651437807290/" target="_blank" class="copyright-note">Open Knowledge Foundation Deutschland</a>
 
 					<aside class="notes">
 						<ul>
@@ -75,7 +72,7 @@
 				</section>
 				<section>
 					<img src="images/2016/agenda.jpg">
-					<a href="https://www.flickr.com/photos/okfde/16879099627/in/album-72157651437807290/" class="copyright-note">Open Knowledge Foundation Deutschland</a>
+					<a href="https://www.flickr.com/photos/okfde/16879099627/in/album-72157651437807290/" target="_blank" class="copyright-note">Open Knowledge Foundation Deutschland</a>
 
 					<aside class="notes">
 						<ul>
@@ -99,14 +96,14 @@
 					<p>/ Frühjahr 2014 Gründung</p>
 					<p>/ Regelmäßige Treffen</p>
 					<p>/ Chaos Communication Camp & Chemnitzer Linux-Tage</p>
-					<p>/ TU Chemnitz - Projekt "Living lab" der Forschungsgruppe <a href="https://medien.informatik.tu-chemnitz.de/miteinander/">Miteinander</a>
+					<p>/ TU Chemnitz - Projekt "Living lab" der Forschungsgruppe <a href="https://medien.informatik.tu-chemnitz.de/miteinander/" target="_blank">Miteinander</a>
 					<p>/ Herbst 2017: Chemnitz hackt!</p>
 				</section>
 				<section class="left">
 					<h3>Unsere Ziele</h3>
 					<p>/ offene Daten finden</p>
 					<p>/ gemeinsam Projekte umsetzen</p>
-					<p>/ mehr Daten in Chemnitz öffnen <i>*sigh*</i></p>
+					<p>/ mehr Daten in Chemnitz öffnen</p>
 					<p>/ Mitstreiter begeistern</p>
 				</section>
 
@@ -163,6 +160,7 @@
 				<section>
 						<h3>Offene Daten und Chemnitz!</h3>
 						<img src="images/2018/portal.png" height="80%" class="no-shadow"/>
+						<p><a href="http://codeforchemnitz.de/links/" target="_blank">http://codeforchemnitz.de/links/</a></p>
 
 				</section>
 
